// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic1 > default 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 5,
                      "offset": 36,
                    },
                    "start": {
                      "column": 7,
                      "line": 5,
                      "offset": 33,
                    },
                  },
                  "type": "text",
                  "value": "将进酒",
                },
              ],
              "depth": 3,
              "position": {
                "end": {
                  "column": 11,
                  "line": 5,
                  "offset": 37,
                },
                "start": {
                  "column": 3,
                  "line": 5,
                  "offset": 29,
                },
              },
              "type": "heading",
            },
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 22,
                      "line": 7,
                      "offset": 60,
                    },
                    "start": {
                      "column": 3,
                      "line": 7,
                      "offset": 41,
                    },
                  },
                  "type": "text",
                  "value": "君不见黄河之水天上来，奔流到海不复回。",
                },
                {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 7,
                      "offset": 61,
                    },
                    "start": {
                      "column": 22,
                      "line": 7,
                      "offset": 60,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 22,
                      "line": 8,
                      "offset": 83,
                    },
                    "start": {
                      "column": 23,
                      "line": 7,
                      "offset": 61,
                    },
                  },
                  "type": "text",
                  "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
                },
                {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 8,
                      "offset": 84,
                    },
                    "start": {
                      "column": 22,
                      "line": 8,
                      "offset": 83,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 9,
                      "offset": 103,
                    },
                    "start": {
                      "column": 23,
                      "line": 8,
                      "offset": 84,
                    },
                  },
                  "type": "text",
                  "value": "
人生得意须尽欢，莫使金樽空对月。",
                },
                {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 9,
                      "offset": 104,
                    },
                    "start": {
                      "column": 19,
                      "line": 9,
                      "offset": 103,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 10,
                      "offset": 123,
                    },
                    "start": {
                      "column": 20,
                      "line": 9,
                      "offset": 104,
                    },
                  },
                  "type": "text",
                  "value": "
天生我材必有用，千金散尽还复来。",
                },
                {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 10,
                      "offset": 124,
                    },
                    "start": {
                      "column": 19,
                      "line": 10,
                      "offset": 123,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 11,
                      "offset": 143,
                    },
                    "start": {
                      "column": 20,
                      "line": 10,
                      "offset": 124,
                    },
                  },
                  "type": "text",
                  "value": "
烹羊宰牛且为乐，会须一饮三百杯。",
                },
                {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 11,
                      "offset": 144,
                    },
                    "start": {
                      "column": 19,
                      "line": 11,
                      "offset": 143,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 12,
                      "offset": 163,
                    },
                    "start": {
                      "column": 20,
                      "line": 11,
                      "offset": 144,
                    },
                  },
                  "type": "text",
                  "value": "
岑夫子，丹丘生，将进酒，杯莫停。",
                },
                {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 12,
                      "offset": 164,
                    },
                    "start": {
                      "column": 19,
                      "line": 12,
                      "offset": 163,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 17,
                      "line": 13,
                      "offset": 181,
                    },
                    "start": {
                      "column": 20,
                      "line": 12,
                      "offset": 164,
                    },
                  },
                  "type": "text",
                  "value": "
与君歌一曲，请君为我倾耳听。",
                },
                {
                  "position": {
                    "end": {
                      "column": 18,
                      "line": 13,
                      "offset": 182,
                    },
                    "start": {
                      "column": 17,
                      "line": 13,
                      "offset": 181,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 14,
                      "offset": 201,
                    },
                    "start": {
                      "column": 18,
                      "line": 13,
                      "offset": 182,
                    },
                  },
                  "type": "text",
                  "value": "
钟鼓馔玉不足贵，但愿长醉不复醒。",
                },
              ],
              "position": {
                "end": {
                  "column": 28,
                  "line": 18,
                  "offset": 290,
                },
                "start": {
                  "column": 3,
                  "line": 7,
                  "offset": 41,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 2,
              "line": 19,
              "offset": 291,
            },
            "start": {
              "column": 1,
              "line": 4,
              "offset": 25,
            },
          },
          "type": "blockquote",
        },
      ],
      "keyword": "tip",
      "position": {
        "end": {
          "column": 5,
          "line": 22,
          "offset": 307,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "title": [
        {
          "position": {
            "end": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
            "start": {
              "column": 8,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "text",
          "value": "将进酒 -- 李白 ",
        },
        {
          "position": {
            "end": {
              "column": 23,
              "line": 2,
              "offset": 23,
            },
            "start": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
          },
          "type": "inlineMath",
          "value": "x^2",
        },
      ],
      "type": "admonition",
    },
  ],
  "position": {
    "end": {
      "column": 76,
      "line": 95,
      "offset": 1557,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`basic1 > excerpt-40 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 5,
                      "offset": 36,
                    },
                    "start": {
                      "column": 7,
                      "line": 5,
                      "offset": 33,
                    },
                  },
                  "type": "text",
                  "value": "将进酒",
                },
              ],
              "depth": 3,
              "position": {
                "end": {
                  "column": 11,
                  "line": 5,
                  "offset": 37,
                },
                "start": {
                  "column": 3,
                  "line": 5,
                  "offset": 29,
                },
              },
              "type": "heading",
            },
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 22,
                      "line": 7,
                      "offset": 60,
                    },
                    "start": {
                      "column": 3,
                      "line": 7,
                      "offset": 41,
                    },
                  },
                  "type": "text",
                  "value": "君不见黄河之水天上来，奔流到海不复回。",
                },
                {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 7,
                      "offset": 61,
                    },
                    "start": {
                      "column": 22,
                      "line": 7,
                      "offset": 60,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 22,
                      "line": 8,
                      "offset": 83,
                    },
                    "start": {
                      "column": 23,
                      "line": 7,
                      "offset": 61,
                    },
                  },
                  "type": "text",
                  "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
                },
              ],
              "position": {
                "end": {
                  "column": 28,
                  "line": 18,
                  "offset": 290,
                },
                "start": {
                  "column": 3,
                  "line": 7,
                  "offset": 41,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 2,
              "line": 19,
              "offset": 291,
            },
            "start": {
              "column": 1,
              "line": 4,
              "offset": 25,
            },
          },
          "type": "blockquote",
        },
      ],
      "keyword": "tip",
      "position": {
        "end": {
          "column": 5,
          "line": 22,
          "offset": 307,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "title": [
        {
          "position": {
            "end": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
            "start": {
              "column": 8,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "text",
          "value": "将进酒 -- 李白 ",
        },
        {
          "position": {
            "end": {
              "column": 23,
              "line": 2,
              "offset": 23,
            },
            "start": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
          },
          "type": "inlineMath",
          "value": "x^2",
        },
      ],
      "type": "admonition",
    },
  ],
  "position": {
    "end": {
      "column": 76,
      "line": 95,
      "offset": 1557,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`basic1 default 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 5,
                      "offset": 36,
                    },
                    "start": {
                      "column": 7,
                      "line": 5,
                      "offset": 33,
                    },
                  },
                  "type": "text",
                  "value": "将进酒",
                },
              ],
              "depth": 3,
              "position": {
                "end": {
                  "column": 11,
                  "line": 5,
                  "offset": 37,
                },
                "start": {
                  "column": 3,
                  "line": 5,
                  "offset": 29,
                },
              },
              "type": "heading",
            },
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 22,
                      "line": 7,
                      "offset": 60,
                    },
                    "start": {
                      "column": 3,
                      "line": 7,
                      "offset": 41,
                    },
                  },
                  "type": "text",
                  "value": "君不见黄河之水天上来，奔流到海不复回。",
                },
                {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 7,
                      "offset": 61,
                    },
                    "start": {
                      "column": 22,
                      "line": 7,
                      "offset": 60,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 22,
                      "line": 8,
                      "offset": 83,
                    },
                    "start": {
                      "column": 23,
                      "line": 7,
                      "offset": 61,
                    },
                  },
                  "type": "text",
                  "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
                },
                {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 8,
                      "offset": 84,
                    },
                    "start": {
                      "column": 22,
                      "line": 8,
                      "offset": 83,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 9,
                      "offset": 103,
                    },
                    "start": {
                      "column": 23,
                      "line": 8,
                      "offset": 84,
                    },
                  },
                  "type": "text",
                  "value": "
人生得意须尽欢，莫使金樽空对月。",
                },
                {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 9,
                      "offset": 104,
                    },
                    "start": {
                      "column": 19,
                      "line": 9,
                      "offset": 103,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 10,
                      "offset": 123,
                    },
                    "start": {
                      "column": 20,
                      "line": 9,
                      "offset": 104,
                    },
                  },
                  "type": "text",
                  "value": "
天生我材必有用，千金散尽还复来。",
                },
                {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 10,
                      "offset": 124,
                    },
                    "start": {
                      "column": 19,
                      "line": 10,
                      "offset": 123,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 11,
                      "offset": 143,
                    },
                    "start": {
                      "column": 20,
                      "line": 10,
                      "offset": 124,
                    },
                  },
                  "type": "text",
                  "value": "
烹羊宰牛且为乐，会须一饮三百杯。",
                },
                {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 11,
                      "offset": 144,
                    },
                    "start": {
                      "column": 19,
                      "line": 11,
                      "offset": 143,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 12,
                      "offset": 163,
                    },
                    "start": {
                      "column": 20,
                      "line": 11,
                      "offset": 144,
                    },
                  },
                  "type": "text",
                  "value": "
岑夫子，丹丘生，将进酒，杯莫停。",
                },
                {
                  "position": {
                    "end": {
                      "column": 20,
                      "line": 12,
                      "offset": 164,
                    },
                    "start": {
                      "column": 19,
                      "line": 12,
                      "offset": 163,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 17,
                      "line": 13,
                      "offset": 181,
                    },
                    "start": {
                      "column": 20,
                      "line": 12,
                      "offset": 164,
                    },
                  },
                  "type": "text",
                  "value": "
与君歌一曲，请君为我倾耳听。",
                },
                {
                  "position": {
                    "end": {
                      "column": 18,
                      "line": 13,
                      "offset": 182,
                    },
                    "start": {
                      "column": 17,
                      "line": 13,
                      "offset": 181,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 19,
                      "line": 14,
                      "offset": 201,
                    },
                    "start": {
                      "column": 18,
                      "line": 13,
                      "offset": 182,
                    },
                  },
                  "type": "text",
                  "value": "
钟鼓馔玉不足贵，但愿长醉不复醒。",
                },
              ],
              "position": {
                "end": {
                  "column": 28,
                  "line": 18,
                  "offset": 290,
                },
                "start": {
                  "column": 3,
                  "line": 7,
                  "offset": 41,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 2,
              "line": 19,
              "offset": 291,
            },
            "start": {
              "column": 1,
              "line": 4,
              "offset": 25,
            },
          },
          "type": "blockquote",
        },
      ],
      "keyword": "tip",
      "position": {
        "end": {
          "column": 5,
          "line": 22,
          "offset": 307,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "title": [
        {
          "position": {
            "end": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
            "start": {
              "column": 8,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "text",
          "value": "将进酒 -- 李白 ",
        },
        {
          "position": {
            "end": {
              "column": 23,
              "line": 2,
              "offset": 23,
            },
            "start": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
          },
          "type": "inlineMath",
          "value": "x^2",
        },
      ],
      "type": "admonition",
    },
  ],
  "position": {
    "end": {
      "column": 76,
      "line": 95,
      "offset": 1557,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`basic1 excerpt-40 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 5,
                      "offset": 36,
                    },
                    "start": {
                      "column": 7,
                      "line": 5,
                      "offset": 33,
                    },
                  },
                  "type": "text",
                  "value": "将进酒",
                },
              ],
              "depth": 3,
              "position": {
                "end": {
                  "column": 11,
                  "line": 5,
                  "offset": 37,
                },
                "start": {
                  "column": 3,
                  "line": 5,
                  "offset": 29,
                },
              },
              "type": "heading",
            },
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 22,
                      "line": 7,
                      "offset": 60,
                    },
                    "start": {
                      "column": 3,
                      "line": 7,
                      "offset": 41,
                    },
                  },
                  "type": "text",
                  "value": "君不见黄河之水天上来，奔流到海不复回。",
                },
                {
                  "position": {
                    "end": {
                      "column": 23,
                      "line": 7,
                      "offset": 61,
                    },
                    "start": {
                      "column": 22,
                      "line": 7,
                      "offset": 60,
                    },
                  },
                  "type": "break",
                },
                {
                  "position": {
                    "end": {
                      "column": 22,
                      "line": 8,
                      "offset": 83,
                    },
                    "start": {
                      "column": 23,
                      "line": 7,
                      "offset": 61,
                    },
                  },
                  "type": "text",
                  "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
                },
              ],
              "position": {
                "end": {
                  "column": 28,
                  "line": 18,
                  "offset": 290,
                },
                "start": {
                  "column": 3,
                  "line": 7,
                  "offset": 41,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 2,
              "line": 19,
              "offset": 291,
            },
            "start": {
              "column": 1,
              "line": 4,
              "offset": 25,
            },
          },
          "type": "blockquote",
        },
      ],
      "keyword": "tip",
      "position": {
        "end": {
          "column": 5,
          "line": 22,
          "offset": 307,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "title": [
        {
          "position": {
            "end": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
            "start": {
              "column": 8,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "text",
          "value": "将进酒 -- 李白 ",
        },
        {
          "position": {
            "end": {
              "column": 23,
              "line": 2,
              "offset": 23,
            },
            "start": {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
          },
          "type": "inlineMath",
          "value": "x^2",
        },
      ],
      "type": "admonition",
    },
  ],
  "position": {
    "end": {
      "column": 76,
      "line": 95,
      "offset": 1557,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
